# cobra

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: Cobra.cmake
cobra/: main.cpp
cobra.xcodeproj/: project.pbxproj
cobra.xcodeproj/xcuserdata/roycao.xcuserdatad/xcschemes/: xcschememanagement.plist
cobra/AST/: ASTBuilder.cpp  ASTVisitor.cpp  ASTVisitor.hpp  Tree.cpp  Tree.hpp
cobra/Core/: Allocator.cpp  Allocator.hpp  CBValue.cpp  CBValue.hpp  GC.cpp  GC.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Paser.cpp  Paser.hpp  SMLoc.hpp  VM.cpp  VM.hpp
cobra/Frontend/: IR.cpp  IR.hpp  IRBuilder.cpp  IRBuilder.hpp  IRGen.cpp  IRGen.hpp  Instrs.cpp  Instrs.def  Instrs.hpp  Scope.cpp
cobra/Parser/: Allocator.hpp  Lexer.cpp  Lexer.hpp  Paser.cpp  Paser.hpp  TokenKinds.def
cobra/VMRuntime/: CBFunction.cpp  CBFunction.hpp  CBObject.cpp  CBObject.hpp  CBString.cpp  CBValue.cpp  CBValue.hpp  CodeBlock.cpp  CodeBlock.hpp  Context.hpp  GC.hpp  GCCell.cpp  GCCell.hpp  PrimitiveBox.cpp  PrimitiveBox.hpp  Runtime.cpp  Runtime.hpp  String.cpp  String.hpp
cobra/test/: fibonacci.co  num.co
doc/: GC.md  Guides.md  Interpreter.md
include/cobra/AST/: ASTBuilder.h  ASTVisitor.h  Context.h  DeclNodes.def  ExprNodes.def  PatternNodes.def  StmtNodes.def  Tree.h
include/cobra/BCGen/: BCGen.h  BCPasses.h  Bytecode.h  BytecodeGenerator.h  BytecodeInstructionGenerator.h  BytecodeInstructionSelector.h  BytecodeList.def  BytecodeRawData.h  Lowering.h  MovElimination.h  RegAlloc.h
include/cobra/Driver/: Driver.h
include/cobra/IR/: Analysis.h  CFG.h  Dominance.h  IR.h  IRBuilder.h  Instrs.def  Instrs.h  Scope.h  ValueKinds.def
include/cobra/IRGen/: IRGen.h
include/cobra/Inst/: Inst.h
include/cobra/Optimizer/: CSE.h  DCE.h  Inlining.h  Mem2Reg.h  Pass.h  PassManager.h  Passes.def  PhiElimination.h  Pipeline.h  SSADestruction.h  SimplifyCFG.h
include/cobra/Parser/: Lexer.h  Parser.h  TokenKinds.def
include/cobra/Support/: Allocator.h  Array.h  ArraySlice.h  Base64.h  BitSet.h  BitVector.h  Common.h  FixedArray.h  Identifier.h  Leb128.h  LengthPrefixedArray.h  MathExtras.h  OSCompat.h  SMLoc.h  StdLibExtras.h  StrideIterator.h  StringRef.h  StringTable.h  iterator.h
include/cobra/Utils/: IRPrinter.h
include/cobra/VM/: Array.h  BitSet.h  CBFunction.h  CBMethod.h  CBObject.h  CBValue.h  CardTable.h  CexFile.h  Class.h  ClassAccessor.h  ClassDataAccessor.h  ClassLinker.h  CobraCache.h  CobraVM.h  CodeBlock.h  CodeDataAccessor.h  Context.h  CotFile.h  Field.h  File.h  FreeList.h  GC.h  GCBitSet.h  GCCell.h  GCPointer.h  GCRoot.h  Handle.h  HeapRegion.h  HeapRegionSpace.h  InterfaceTable.h  Interpreter.h  MarkBitSet.h  MemMapAllocator.h  Method.h  Modifiers.h  Object.h  ObjectAccessor.h  Offset.h  Operations.h  Primitive.h  (+8 more)
lib/: CMakeLists.txt
lib/AST/: ASTBuilder.cpp  ASTVisitor.cpp  CMakeLists.txt  SemanticChecker.cpp  SemanticChecker.h  Tree.cpp
lib/BCGen/: BCGen.cpp  BCPasses.cpp  Bytecode.cpp  BytecodeGenerator.cpp  BytecodeInstructionSelector.cpp  BytecodeRawData.cpp  CMakeLists.txt  Lowering.cpp  MovElimination.cpp  RegAlloc.cpp
lib/Driver/: CMakeLists.txt  Driver.cpp
lib/IR/: Analysis.cpp  Dominance.cpp  IR.cpp  IRBuilder.cpp  Instrs.cpp  Scope.cpp
lib/IRGen/: IRGen.cpp  IRGenExpr.cpp  IRGenFunction.cpp  IRGenStmt.cpp
lib/Optimizer/: CMakeLists.txt  CSE.cpp  DCE.cpp  Inlining.cpp  Mem2Reg.cpp  PassManager.cpp  PhiElimination.cpp  Pipeline.cpp  SSADestruction.cpp  SimplifyCFG.cpp
lib/Parser/: CMakeLists.txt  Lexer.cpp  Parser.cpp
lib/Support/: Base64.cpp  Base64.h  CMakeLists.txt  OSCompatPosix.cpp  StringRef.cpp  zip.cpp
lib/Utils/: IRPrinter.cpp
lib/VM/: Array.cpp  CBFunction.cpp  CBMethod.cpp  CBObject.cpp  CBValue.cpp  CMakeLists.txt  CardTable.cpp  CexFile.cpp  Class.cpp  ClassAccessor.cpp  ClassDataAccessor.cpp  ClassLinker.cpp  CobraCache.cpp  CobraVM.cpp  CodeBlock.cpp  CodeDataAccessor.cpp  CotFile.cpp  Field.cpp  File.cpp  FreeList.cpp  GC.cpp  GCBitSet.cpp  GCCell.cpp  GCPointer.cpp  GCRoot.cpp  Handle.cpp  HeapRegion.cpp  HeapRegionSpace.cpp  InterfaceTable.cpp  Interpreter-inl.h  Interpreter.cpp  MemMapAllocator.cpp  Method.cpp  Object.cpp  ObjectAccessor.cpp  Offset.cpp  Operations.cpp  Primitive.cpp  PrimitiveBox.cpp  Runtime.cpp  (+6 more)
test/: fibonacci.co  num.co
tools/: CMakeLists.txt
tools/cobra/: CMakeLists.txt  cobra.cpp
